<resources>
    <string name="app_name">Management Resiko</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="toolbar_title">Daftar Kuesioner</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>


    <string name="menu_profile">Profile</string>
    <string name="menu_ckk">Cakupan, konteks dan Kriteria</string>
    <string name="menu_ir">Identifikasi Risiko</string>
    <string name="menu_ar">Analisis Risiko</string>
    <string name="menu_er">Evaluasi Risiko</string>
    <string name="menu_tr">Treatmen Risiko</string>

    <string name="menu_PSO">Personil dan Struktur Organisasi</string>
    <string name="menu_SK">Sistem Komunikasi</string>
    <string name="menu_JIDKD">Jalur Informasi dan Deklarasi Keadaan Darurat</string>
    <string name="menu_RPKD">Response Penanggulangan Keadaan Darurat</string>
    <string name="menu_PKL">Pos Komando Lapangan</string>
    <string name="menu_PEKD">Penanganan Eskalasi Keadaan Darurat</string>
    <string name="menu_PR">Pemberhentian Respon</string>
    <string name="menu_PP">Peralatan dan Perlengkapan</string>
    <string name="menu_LKD">Latihan Kondisi Darurat</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string-array name="kelengkapan">
        <item value="a">Dokumen Lengkap</item>
        <item value="b">Dokumen telah dipenuhi hampir seluruhnya</item>
        <item value="c">Dokumen yang paling penting dipenuhi</item>
        <item value="d">Dokumen baru terpenuhi pada tingkatan tertentu</item>
        <item value="e">Hampir tidak ada dokumen tidak tersedia</item>
    </string-array>

    <string-array name="kesesuaian">
        <item value="a">Sesuai</item>
        <item value="b">Hampir Sesuai</item>
        <item value="c">Hal-hal yang penting telah terpenuhi</item>
        <item value="d">Kesesuaian baru dalam hal tertentu saja, namun bukan merupakan yang penting</item>
        <item value="e">Tidak sesuai</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
